smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/maps/map-empty-members.smithy
// Missing required members of shape `com.foo#MyMap`: key, value
namespace com.foo

map MyMap {}
